--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>raposo nao pegue</p>
     <h1>é uma metafora do capitalismo</h1>
     <h2>não acredito em humor, é brincadeira</h2>
+    <img src="https://aventurasnahistoria.uol.com.br/media/uploads/hard_news/lo-fi_girl.jpg" alt="">
 </body>
 </html>
